## CMakeLists.txt
##
##

# Define the following vars in your CMakeCache.txt file(s)

cmake_minimum_required(VERSION 2.6)

PROJECT(Lazynput)

SET(VCPKG_PATH "D:/Projets/vcpkg")
SET(CMAKE_INCLUDE_PATH ${VCPKG_PATH}"/installed/x64-windows/include")
SET(CMAKE_LIBRARY_PATH ${VCPKG_PATH}"/installed/x64-windows/lib")

IF(WIN32)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /D _CRT_SECURE_NO_WARNINGS /D LAZYNPUT_USE_SFML_WRAPPER /wd4244 /wd4267 /wd4307 /wd4305")
ELSE(WIN32)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -pedantic -DLAZYNPUT_USE_SFML_WRAPPER")
ENDIF(WIN32)

FILE(
    GLOB_RECURSE
    source_files
    src/*
)

#ADD_LIBRARY(Lazynput SHARED ${source_files})
ADD_EXECUTABLE(Lazynput ${source_files})

SET(CURRENT_TARGET Lazynput)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")

FIND_PACKAGE(SFML 2.5.0 COMPONENTS graphics window system REQUIRED)
#FIND_PACKAGE(SDL2 REQUIRED)
#FIND_PACKAGE(GLFW3 REQUIRED)

IF(SFML_FOUND)
  TARGET_LINK_LIBRARIES(${CURRENT_TARGET} ${SFML_LIBRARIES})
ENDIF(SFML_FOUND)

IF(SDL2_FOUND)
  TARGET_LINK_LIBRARIES(${CURRENT_TARGET} ${SDL2_LIBRARIES})
ENDIF(SDL2_FOUND)

IF(GLFW3_FOUND)
  TARGET_LINK_LIBRARIES(${CURRENT_TARGET} ${GLFW3_LIBRARY})
ENDIF(GLFW3_FOUND)

SET_PROPERTY(TARGET ${CURRENT_TARGET} PROPERTY INCLUDE_DIRECTORIES
  ${SFML_INCLUDE_DIR}
  ${SDL_INCLUDE_DIR}
  ${GLFW3_INCLUDE_DIR}
  ${CMAKE_SOURCE_DIR}/include/
)
